# Price-comparer

./: README.md  pyproject.toml
src/price_comparator/: __init__.py  cli.py  config.py  discovery.py  models.py
src/price_comparator/data/: products_raw.yaml  products_resolved.yaml
src/price_comparator/stores/: __init__.py  base.py  giant.py  target.py
src/price_comparator/utils/: http.py  parsing.py
tests/: test_cli.py  test_discovery.py  test_giant.py  test_target.py
